<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_141414"
        tools:context=".ui.channel.ChannelNotificationSettingActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cls_titlebar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="@dimen/circle_statusbar_height"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/back_arrow_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/circle_notification_setting"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_back"
                app:layout_constraintLeft_toRightOf="@id/iv_back"
                app:layout_constraintTop_toTopOf="@id/iv_back" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/rg_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cls_titlebar">

            <RadioButton
                android:id="@+id/rb_all_msg"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/shape_line_2e2e2e_bg"
                android:button="@null"
                android:drawableRight="@drawable/selector_check_uncheck"
                android:gravity="center_vertical"
                android:text="@string/circle_all_messages"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_no_notify"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/shape_line_2e2e2e_bg"
                android:button="@null"
                android:drawableRight="@drawable/selector_check_uncheck"
                android:gravity="center_vertical"
                android:text="@string/circle_no_notification"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>